# Xigua

./: .gitignore  .travis.yml  CMakeLists.txt  licence.txt  makefile  readme.md  xigua
doxygen/: Doxyfile
etc/Sublime Text/: xigua.tmLanguage
examples/: bench.xigua  factorial.xi  factorial.xigua  hello_world.xi  hello_world.xigua  import_1.xigua  import_2.xigua  import_as.xigua  macro.xigua  nested_functions.xigua  print.xi  repl.cpp  test.xigua  ycombinator.xigua
include/: data.hpp  enviroment.hpp  parser.hpp  stdlib.hpp  xigua.hpp
include/xigua/: boolean.hpp  data.hpp  data_types.hpp  decimal.hpp  enviroment.hpp  error.hpp  evaluate.hpp  function.hpp  functional.hpp  integer.hpp  keyword.hpp  map.hpp  none.hpp  parser.hpp  process.hpp  record.hpp  stdlib.hpp  string.hpp  symbol.hpp  tuple.hpp  types.hpp  xigua.hpp
src/: data.cpp  data.hpp  datatype.cpp  datatype.hpp  enviroment.cpp  enviroment.hpp  error.cpp  error.hpp  evaluate.cpp  evaluate.hpp  function.cpp  function.hpp  functions.hpp  functionutils.hpp  helpers.cpp  helpers.hpp  main.cpp  parser.cpp  parser.hpp  stdlib.cpp  stdlib.hpp
src/functions/: boolean.hpp  containers.hpp  core.hpp  math.hpp  string.hpp  tuple.hpp
src/shell/: CMakeLists.txt  main.cpp
src/stdlib/: CMakeLists.txt  benchmark.hpp  boolean.cpp  boolean.hpp  containers.cpp  containers.hpp  core.cpp  core.hpp  function.hpp  math.cpp  math.hpp  record.hpp  stdlib.cpp  string.cpp  string.hpp  test.hpp  tuple.cpp  tuple.hpp  types.hpp  utils.cpp  utils.hpp
src/tests/: CMakeLists.txt  data.cpp  enviroment.cpp  evaluate.cpp  main.cpp  parser.cpp
src/tests/stdlib/: boolean.cpp  containers.cpp  core.cpp  function.cpp  math.cpp  string.cpp  tuple.cpp  types.cpp
src/xigua/: CMakeLists.txt  boolean.cpp  data.cpp  data_types.cpp  decimal.cpp  enviroment.cpp  error.cpp  evaluate.cpp  function.cpp  integer.cpp  keyword.cpp  main.cpp  map.cpp  none.cpp  parser.cpp  process.cpp  record.cpp  stdlib.cpp  string.cpp  symbol.cpp  tuple.cpp
src/xigua/stdlib/: benchmark.hpp  boolean.hpp  containers.hpp  core.hpp  function.hpp  math.hpp  string.hpp  test.hpp  tuple.hpp  types.hpp  utils.cpp  utils.hpp
tests/: data.cpp  enviroment.cpp
