set(SOURCE_FILES data.cpp boolean.cpp integer.cpp decimal.cpp string.cpp keyword.cpp symbol.cpp tuple.cpp process.cpp none.cpp map.cpp enviroment.cpp error.cpp evaluate.cpp function.cpp parser.cpp ${PROJECT_SOURCE_DIR}/include/xigua/data.hpp ${PROJECT_SOURCE_DIR}/include/xigua/error.hpp ${PROJECT_SOURCE_DIR}/include/xigua/function.hpp ${PROJECT_SOURCE_DIR}/include/xigua/enviroment.hpp ${PROJECT_SOURCE_DIR}/include/xigua/evaluate.hpp ${PROJECT_SOURCE_DIR}/include/xigua/parser.hpp ${PROJECT_SOURCE_DIR}/include/xigua/xigua.hpp ${PROJECT_SOURCE_DIR}/include/xigua/boolean.hpp ${PROJECT_SOURCE_DIR}/include/xigua/integer.hpp ${PROJECT_SOURCE_DIR}/include/xigua/decimal.hpp ${PROJECT_SOURCE_DIR}/include/xigua/string.hpp ${PROJECT_SOURCE_DIR}/include/xigua/keyword.hpp ${PROJECT_SOURCE_DIR}/include/xigua/symbol.hpp ${PROJECT_SOURCE_DIR}/include/xigua/tuple.hpp ${PROJECT_SOURCE_DIR}/include/xigua/process.hpp ${PROJECT_SOURCE_DIR}/include/xigua/none.hpp ${PROJECT_SOURCE_DIR}/include/xigua/map.hpp)


include_directories("stdlib")
add_library(xigua ${SOURCE_FILES})
